Fix layout bugs, upscale images.

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -12,6 +12,9 @@
 */
 h1, h2, h3, nav a, .play, a, .glyph {
   font-family: $fonts_title;
+}
+
+h1, h2, nav a, .play, .glyph {
   white-space: nowrap;
 }
 
@@ -52,11 +55,11 @@ a:hover {
 }
 
 h1 {
-  color: $color_neutral;
   font-size: 62px;
-  line-height:60px;
-
+  line-height: 60px;
   font-weight: normal;
+
+  color: $color_neutral;
 }
 
 h3 {
