--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,10 +12,10 @@
 */
 .outer_panel {
   min-width: $content_min;
-  max-width: 1500px;
+  max-width: 1400px;
 
   width: 70%;
-  margin-left: 250px;
+  margin-left: 300px;
 
   min-height: 100%;
 
