--- a/sass/_pagination.scss
+++ b/sass/_pagination.scss
@@ -11,13 +11,12 @@
 /*
   Sketchbook pagination
 */
-h3.in_blog{
+h3.copy {
+  margin-top: 70px;
+  padding-top: 0px;
+
   font-size: 22px;
   color: $color_panel_dark;
-
-  margin-left: 40px;
-  margin-top: 70px;
-  padding-top:0px;
 }
 
 .paging-navigation {
@@ -25,8 +24,8 @@ h3.in_blog{
   margin: 50px 0;
   margin-top: 30px;
 
-  position: relative;
-  left: 50px;
+  //position: relative;
+  //left: 50px;
   color: $color_neutral_dark;
 }
 
