--- a/sass/_picture.scss
+++ b/sass/_picture.scss
@@ -12,7 +12,6 @@
 */
 .illustration_block {
   display:block;
-  width: 100%;
 }
 
 a.illustration_outer {
