--- a/sass/_sketchbook.scss
+++ b/sass/_sketchbook.scss
@@ -16,14 +16,21 @@
     padding: 0px;
 
     margin-top: 60px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 
     padding-left: $content_padding;
     border-left: 1px solid $color_panel_accent;
 
     h3 {
-      margin-bottom: 10px;
-      line-height: 10px;
+      display: block;
+      width: 100% - $content_padding;
+      margin-bottom: 30px;
+
+      font-size: 62px;
+      line-height: 60px;
+      font-weight: normal;
+
+      color: $color_neutral;
     }
   }
 
@@ -34,6 +41,7 @@
 
     p {
       width: 100%;
+      margin-left: -80px;
     }
 
     img {
@@ -50,6 +58,7 @@
       padding: 0px;
       margin-top: 10px;
       margin-bottom: 20px;
+      margin-left: 80px;
     }
 
     blockquote {
